[package]
name = "flacdat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.4.1"
clap = { version = "4.4.2", features = ["derive", "wrap_help"] }
metaflac = "0.2.5"
thiserror = "1.0.48"
