[package]
name = "flacdat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive", "wrap_help"] }
csv = "1.2.2"
id3 = "1.8.0"
metaflac = "0.2.5"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
wild = "2.1.0"
